--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,14 @@ repositories {
 
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-freemarker")
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile("org.springframework.boot:spring-boot-starter-test") 
+    compile('org.springframework.boot:spring-boot-starter-freemarker',
+            "org.springframework.boot:spring-boot-starter-web",
+            'org.springframework.boot:spring-boot-starter-data-jpa',
+            'org.hsqldb:hsqldb:2.3.3',
+            'org.springframework.boot:spring-boot-starter-mail')
+    testCompile("org.springframework.boot:spring-boot-starter-test",
+            'junit:junit:4.12',
+            'org.mockito:mockito-all:1.10.19')
 }
 
 
