--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
         classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+        classpath "se.transmode.gradle:gradle-docker:1.2"
     }
 }
 
@@ -16,7 +18,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.bmuschko.docker-remote-api'
+apply plugin: 'docker'
 
 jar {
     baseName = 'bootlearning'
@@ -24,6 +26,7 @@ jar {
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
 
 repositories {
     mavenCentral()
@@ -52,3 +55,18 @@ eclipse {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
+
+
+task buildDocker(type: Docker) {
+    baseImage = 'frolvlad/alpine-oraclejdk8:slim'
+    push = project.hasProperty('push')
+    tag = 'ncmao/vueapp'
+    addFile {
+        from jar
+        rename {'app.jar'}
+    }
+    entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-jar', '/app.jar'])
+    exposePort(9000)
+}
+
+buildDocker.dependsOn(build)
