--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.mail.username=minchina91@gmail.com
 spring.mail.port=587
 spring.mail.password=bvkKF9iLBLMJ8RggVXGi3Q
 server.port=8888
+server.context-path=/app-vue
