--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.99.100:3306/demo?useUnicode=true&characterEncoding=UTF-8
-    username: root
-    password: minchina91
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:hsqldb:mem:todomvc;sql.syntax_ora=true
+    username: sa
+    password:
+    driver-class-name: org.hsqldb.jdbcDriver
   rabbitmq:
     host: localhost
     port: 5672
