init hsql database when starting application

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
         transport:
           tcp:
             connect_timeout: 60s
+  jpa:
+    generate-ddl: true
+
 server:
   port: 8888
 mybatis:
