--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://192.168.99.100:3306/demo?useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: minchina91
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
 server:
   port: 8888
