--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<!--<groupId>com.fasterxml.jackson.dataformat</groupId>-->
 			<!--<artifactId>jackson-dataformat-xml</artifactId>-->
 		<!--</dependency>-->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>1.5.8.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
