--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<!--<groupId>com.fasterxml.jackson.dataformat</groupId>-->
 			<!--<artifactId>jackson-dataformat-xml</artifactId>-->
 		<!--</dependency>-->
+		<!-- https://mvnrepository.com/artifact/io.reactivex/rxjava -->
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
