--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>rxjava</artifactId>
 			<version>1.3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxandroid</artifactId>
+			<version>1.2.1</version>
+		</dependency>
 
 	</dependencies>
 
